[build-system]
requires = ["setuptools>=80.0.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "etuples"
description = "Python S-expression emulation using tuple-like objects."
authors = [
    { name = "Brandon T. Willard", email = "brandonwillard+etuples@gmail.com" },
]
maintainers = [
    { name = "Brandon T. Willard", email = "brandonwillard+etuples@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["cons", "multipledispatch"]
dynamic = ["version"]

[project.urls]
Homepage = "http://github.com/pythological/etuples"
Repository = "http://github.com/pythological/etuples"
"Bug Tracker" = "http://github.com/pythological/etuples/issues"

[tool.setuptools]
packages = ["etuples"]

[tool.setuptools.package-data]
etuples = ["py.typed"]

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "dirty-tag"

[tool.pydocstyle]
# Ignore errors for missing docstrings.
# Ignore D202 (No blank lines allowed after function docstring)
# due to bug in black: https://github.com/ambv/black/issues/355
add-ignore = [
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    "D202",
]
convention = "numpy"

[tool.pytest.ini_options]
python_files = ["test*.py"]
testpaths = ["tests"]

[tool.coverage.run]
relative_files = true
omit = ["tests/*"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "assert False",
    "ModuleNotFoundError",
]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.pylint]
max-line-length = 88

[tool.pylint.messages_control]
disable = ["C0330", "C0326"]
